tests/toylang/neg/001634_mutation.toylang
program a = { while a do sleep sleep; } .
